<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UserProfileActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Name Header-->
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/name_field"
            android:text="@string/user_name_title" />
        <!--Name Input-->
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:inputType="textCapWords" />

        <!--Email Header-->
        <TextView
            android:id="@+id/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/email_field"
            android:text="@string/user_age_title" />
        <!--Email Input-->
        <EditText
            android:id="@+id/age_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_age_hint"
            android:inputType="number" />

        <!--Phone Header-->
        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/phone_field"
            android:text="@string/user_phone_title" />
        <!--Phone Input-->
        <EditText
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_phone_hint"
            android:inputType="phone" />

        <!--Gender Header-->
        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/gender_button_group"
            android:text="@string/user_gender_title" />
        <!--Gender Input-->
        <RadioGroup
            android:id="@+id/gender_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--Female Button-->
            <RadioButton
                android:id="@+id/female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="150dp"
                android:text="@string/user_gender_female" />
            <!--Male Button-->
            <RadioButton
                android:id="@+id/male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_gender_male" />
        </RadioGroup>

        <!--Address Header-->
        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/class_field"
            android:text="@string/user_address_title" />
        <!--Address Input-->
        <EditText
            android:id="@+id/address_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_address_hint"
            android:inputType="textPostalAddress" />

        <!--What Makes You Happy Header-->
        <TextView
            android:id="@+id/happy_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/major_field"
            android:text="@string/user_happy_title" />

        <!--What Makes You Happy Input-->
        <EditText
            android:id="@+id/happy_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_happy_hint"
            android:inputType="text" />

        <!--Save Cancel Buttons-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <!--Save Buttons-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:onClick="onSaveClicked"
                android:text="@string/save_button" />
            <!--Cancel Buttons-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:onClick="onCancelClicked"
                android:text="@string/cancel_button" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

