<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpContentEntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/help_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/help_page_title"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/help_page_subtitle"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/help_content"
            android:layout_width="match_parent"
            android:layout_height="549dp"
            android:text="@string/help_page_content"
            android:textAlignment="viewStart"
            android:textSize="25dp"
            tools:layout_margin="15dp" />
    </LinearLayout>

</ScrollView>
