<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_medication"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical">
        <!-- Input type -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="35dp"
            android:text="@string/medication_input_type" />

        <Spinner
            android:id="@+id/medication_input_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:entries="@array/medication_input_spinner_list" />

        <!-- Activity type -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="35dp"
            android:text="@string/medication_medication_type" />

        <Spinner
            android:id="@+id/medication_medication_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:entries="@array/medication_type_spinner_list" />

        <!--Bottom Buttons-->

        <Button
            android:id="@+id/start_start_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="10dp"
            android:text="@string/start_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.example.medminder.HelpButtonCustom
            android:id="@+id/help_button_medication"
            android:layout_marginBottom="20dp"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center" />
    </LinearLayout>

</RelativeLayout>